--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="es" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/shieldLogo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="SHIELD LOGISTIC" />
+    <meta
+      property="og:description"
+      content="Expertos en seguridad privada, protegiendo lo que más valoras."
+    />
+    <meta property="og:image" content="https://i.imgur.com/lK5S4eR.png" />
+    <meta property="og:image:alt" content="Logo de SHIELD LOGISTIC" />
+    <meta property="og:url" content="https://shield-logistic.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <link rel="icon" type="image/svg+xml" href="/shieldLogo.webp" />
     <title>SHIELD LOGISTIC</title>
   </head>
   <body>
