add motion home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       property="og:description"
       content="Expertos en seguridad privada, protegiendo lo que más valoras."
     />
+    <meta
+      name="description"
+      content="Expertos en seguridad privada, protegiendo lo que más valoras."
+    />
+
     <meta property="og:image" content="https://i.imgur.com/lK5S4eR.png" />
     <meta property="og:image:alt" content="Logo de SHIELD LOGISTIC" />
     <meta property="og:url" content="https://shield-logistic.vercel.app/" />
