add new img meta property

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="Expertos en seguridad privada, protegiendo lo que más valoras."
     />
 
-    <meta property="og:image" content="https://i.imgur.com/lK5S4eR.png" />
+    <meta property="og:image" content="https://i.imgur.com/RshGvHN.png" />
     <meta property="og:image:alt" content="Logo de SHIELD LOGISTIC" />
     <meta property="og:url" content="https://shield-logistic.vercel.app/" />
     <meta property="og:type" content="website" />
